fix-gap

--- a/style.css
+++ b/style.css
@@ -105,7 +105,6 @@ header {
 }
 .kartlar{
   display: flex;
-  margin: 7rem;
   margin-top: 3rem;
   gap: 5px;
 }
@@ -152,6 +151,7 @@ header {
   flex-direction: column;
   width: 100%;
   height: auto;
+  gap: 5px;
 }
 .kart-sag .kart-content {
   display: flex;
